--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@reactivex/rxjs": "^5.0.0-beta.1",
     "escape-string-regexp": "^1.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1",
+    "rxjs": "^6.2.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
